--- a/android/app/src/main/res/drawable/launch_background.xml
+++ b/android/app/src/main/res/drawable/launch_background.xml
@@ -2,6 +2,7 @@
 <!-- Modify this file to customize your launch splash screen -->
 <layer-list xmlns:android="http://schemas.android.com/apk/res/android">
     <item android:drawable="@android:color/white" />
+    <item android:drawable="@color/splash_color" />
 
     <!-- You can insert your own image assets here -->
     <!-- <item>
@@ -9,4 +10,7 @@
             android:gravity="center"
             android:src="@mipmap/launch_image" />
     </item> -->
+    <item>
+        <bitmap android:gravity="center" android:src="@drawable/life" />
+    </item>
 </layer-list>
